--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>blah</title>
+    <style>
+        :root {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+        * {
+            box-sizing: border-box;
+        }
+        html {
+            background: #000;
+            color: #fff;
+        }
+
+        body {
+            margin: unset;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+
+        input {
+            padding: 0.5rem 0.8rem;
+            border-radius: 0.5rem;
+            border:unset;
+            background: #222;
+            color: #fff;
+        }
+
+        input[type='submit'] {
+            background: rgb(0, 123, 255);
+        }
+    </style>
+</head>
+<body>
+    <h1>hi</h1>
+    <p>lol</p>
+    
+    <form>
+        <input type="text" name="username" placeholder="Username" />
+
+        <input type="submit" value="Login"/>
+    </form>
+</body>
+</html>
